white space at top fix

--- a/src/Main.css
+++ b/src/Main.css
@@ -257,15 +257,12 @@ html, body {
   font-weight: 600;
   max-height: 25vh;
   height: 25vh;
-  /* height: fit-content; */
   background-color: #242728;
   color: rgb(207, 207, 207);
-  /* border: 3px solid #eee; */
 }
 
 #scramble {
   font-weight: 600;
-  margin-bottom: 1vh;
 }
 
 #scramble-buttons {
@@ -274,6 +271,7 @@ html, body {
   border: 0px solid #eee;
   height: 3vh;
   font-size: 1.5vh;
+  margin-top: 20px;
   margin-left: 0.5vw;
   margin-right: 0.5vw;
 }
